--- a/FitGuide/appsettings.json
+++ b/FitGuide/appsettings.json
@@ -6,4 +6,11 @@
     }
   },
   "AllowedHosts": "*"
+},
+{
+  "ConnectionString": {
+    "DefaultConnection": "Server=.;Database=FitGuide;Trusted_Connection=True;Encrypt=False;",
+    "Identity Connection": "Server=.;Database=FitGuide_Identity;Trusted_Connection=True;Encrypt=False;"
+
+  }
 }
