--- a/FitGuide/appsettings.json
+++ b/FitGuide/appsettings.json
@@ -5,12 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-},
-{
+  "AllowedHosts": "*",
   "ConnectionString": {
     "DefaultConnection": "Server=.;Database=FitGuide;Trusted_Connection=True;Encrypt=False;",
-    "Identity Connection": "Server=.;Database=FitGuide_Identity;Trusted_Connection=True;Encrypt=False;"
+    "IdentityConnection": "Server=.;Database=FitGuide_Identity;Trusted_Connection=True;Encrypt=False;",
 
   }
 }
