--- a/FitGuide/appsettings.json
+++ b/FitGuide/appsettings.json
@@ -17,5 +17,5 @@
     "ValidIssuer": "https://localhost:7013",
     "DurationInDays": 30
   },
-  "ApiBaseUrl": "https://localhost:7207"
+  "ApiBaseUrl": "https://fitguide.azurewebsites.net"
 }
