--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -23,4 +23,10 @@
     <Folder Include="Configuration\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="JSONfiles\Goals.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
