--- a/FitGuide/appsettings.json
+++ b/FitGuide/appsettings.json
@@ -17,5 +17,14 @@
     "ValidIssuer": "https://localhost:7013",
     "DurationInDays": 30
   },
-  "ApiBaseUrl": "https://localhost:7207"
+  "ApiBaseUrl": "https://localhost:7207",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUsername": "your-email@gmail.com",
+    "SmtpPassword": "your-app-password",
+    "FromEmail": "your-email@gmail.com",
+    "FromName": "FitGuide",
+    "EnableSsl": "true"
+  }
 }
